fix sticky menu paddings and z-index

--- a/src/about/about.scss
+++ b/src/about/about.scss
@@ -8,7 +8,7 @@
         width: 50%;
         height: 100%;
         position: sticky;
-        top:220px;
+        top:180px;
 
         .about__title {
             font-weight: 700;
@@ -25,7 +25,7 @@
             line-height: 1.62em;
             opacity: 0.5;
             padding-bottom: 28px;
-            max-width: 32ch;
+            max-width: 36ch;
 
             p:not(:last-child){
                 margin-bottom: 16px;
