--- a/src/footer/footer.scss
+++ b/src/footer/footer.scss
@@ -47,16 +47,14 @@
         form {
             display: flex;
             gap: 8px;
-            align-items: flex-start;
         }
 
         .form-input-field {
-            display: flex;
-            flex-direction: column;
             position: relative;
+            width: 100%;
 
             input {
-                width: 200px;
+                max-width: 200px;
                 height: 44px;
                 border-radius: 22px;
                 outline: none;
@@ -76,8 +74,8 @@
 
             &--is-invalid {
                 position: absolute;
-                top:50px;
-                left:16px;
+                top: 50px;
+                left: 16px;
                 font-style: italic;
                 font-weight: 400;
                 font-size: 10px;
@@ -93,6 +91,7 @@
             padding: 12px 24px;
         }
     }
+
     .footer__copyright {
         grid-area: 2/4/3/5;
         align-self: end;
@@ -103,7 +102,7 @@
         letter-spacing: -0.203125px;
         opacity: 0.5;
     }
-    
+
     .footer__some {
         grid-area: 2/1/3/2;
         font-family: $font-some;
@@ -111,60 +110,60 @@
         align-self: end;
         display: flex;
         gap: 13px;
-    
+
         span:hover {
             color: $primary-color;
             transition: .2s;
         }
     }
-    
+
     @media only screen and (max-width:1000px) {
         .footer-container {
-            grid-template-columns:1fr;
+            grid-template-columns: 1fr;
             grid-template-rows: none;
             justify-items: center;
             row-gap: 54px;
         }
-    
+
         .footer__logo {
             grid-area: 4/1/5/2;
         }
-    
+
         .footer__nav {
             grid-area: 2/1/3/2;
             width: 100%;
             display: flex;
             justify-content: center;
-    
+
             ul {
                 align-content: center;
             }
         }
-    
+
         .footer__form {
             grid-area: 1/1/2/2;
             justify-self: center;
-    
-            input {
-                width: 100%;
+
+            .form-input-field {
+                width:auto;
+                input {
+                    width: 100%;
+                }
             }
-    
+
             .footer__button {
                 padding: 12px 32px;
             }
         }
-    
+
         .footer__some {
             grid-area: 3/1/4/2;
-            gap: 34px;
-            font-size: 32px;
+            gap: clamp(26px, 9vw, 34px);
+            font-size: clamp(24px, 9vw, 32px);
         }
-    
+
         .footer__copyright {
             grid-area: 5/1/6/3;
         }
     }
 }
-    
-
-
