--- a/src/testimonials/testimonials.scss
+++ b/src/testimonials/testimonials.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 64px 0px;
+    padding: 64px 0 180px 0;
     overflow: hidden;
 
     .testimonials__title {
@@ -61,7 +61,7 @@
             line-height: 1.62em;
             text-align: center;
             opacity: 0.5;
-            max-width: 42ch;
+            max-width: 52ch;
             padding: 0 21px;
         }
     }
@@ -92,6 +92,7 @@
 
     @media only screen and (max-width:1400px) {
         padding-top: 0;
+        padding-bottom: 60px;
 
         .swiper-pagination {
             display: block;
